# next-num-package

./: .gitignore  README.md  nextnum.py  nextnumsource.cpp  pyproject.toml
nextnum/: __init__.py  functions.py
